# TestTeam

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
core/: __init__.py  event_bus.py  schemas.py  state_machine.py  validation.py
fakeredis/: __init__.py
jsonschema/: __init__.py
redis/: __init__.py
schemas/: event_envelope.json  payload_schemas.json
scripts/: demo_failure_retry_dlq.py  demo_happy_path.py
services/: base.py  clarification.py  dev_worker.py  orchestrator.py  qa_worker.py  reporting.py  user_gateway.py
src/testteam/: __init__.py  cli.py  storage.py
tests/: conftest.py  test_cli.py  test_happy_path.py  test_retry_dlq.py  test_storage.py  test_validation.py
