[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "testteam"
version = "0.2.0"
description = "Event-driven multi-agent framework MVP"
authors = [{name = "TestTeam"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "redis~=5.0",
    "jsonschema~=4.23",
    "fakeredis~=2.25",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

