[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "testteam"
version = "0.1.0"
description = "CLI and helpers for managing a simple team roster"
authors = [{name = "TestTeam"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
testteam = "testteam.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

